TWC3167-2878: contract Export align fix

--- a/Intel.MyDeals/Client/src/app/contract/contractExport/contractExport.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/contractExport/contractExport.component.css
@@ -138,8 +138,6 @@
     }
 
 .addScrollbar {
-    max-height: 600px;
-    max-width: 1400px;
     overflow: auto;
 }
 .pxPage {
